--- a/www/index.html
+++ b/www/index.html
@@ -22,20 +22,16 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/directives.js"></script>
+
+    <!-- Quest module -->
+    <script src="js/quests/controllers.js"></script>
+    <script src="js/quests/services.js"></script>
+    <script src="js/quests/directives.js"></script>
+    <!-- END: Quest module -->
+
   </head>
-  <body ng-app="starter">
-    <!--
-      The nav bar that will be updated as we navigate between views.
-    -->
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
-    </ion-nav-bar>
-    <!--
-      The views will be rendered in the <ion-nav-view> directive below
-      Templates are in the /templates folder (but you could also
-      have templates inline in this html file if you'd like).
-    -->
+  <body ng-app="journal-material">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
