Añadir pouchdb y service de acceso a la base de datos

--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
     <script src="lib/angular-locale_es-es.js"></script>
+    <script src="lib/pouchdb/pouchdb-5.3.2.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -23,6 +24,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/service-localdb.js"></script>
     <script src="js/directives.js"></script>
 
     <!-- Quest module -->
