--- a/www/index.html
+++ b/www/index.html
@@ -15,9 +15,11 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
     <script src="lib/angular-locale_es-es.js"></script>
+    <script src="lib/angular-messages.min.js"></script>
     <script src="lib/pouchdb/pouchdb-5.3.2.min.js"></script>
     <script src="lib/hashids.min.js"></script>
     <script src="lib/ionic-datepicker.bundle.min.js"></script>
+
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
