--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
     <script src="lib/pouchdb/pouchdb-5.3.2.min.js"></script>
     <script src="lib/hashids.min.js"></script>
     <script src="lib/ionic-datepicker.bundle.min.js"></script>
+    <script src="lib/bluebird.js"></script><!-- another promise lib because angular $q and pouch promises don't match -->
 
 
     <!-- cordova script (this will be a 404 during development) -->
