add require js to load scripts dynamically (seeding scripts)

--- a/www/index.html
+++ b/www/index.html
@@ -21,9 +21,10 @@
     <script src="lib/ionic-datepicker.bundle.min.js"></script>
     <script src="lib/bluebird.js"></script><!-- another promise lib because angular $q and pouch promises don't match -->
 
-
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+
+    <script src="lib/require.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
