--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,12 @@
     <script src="js/quests/directives.js"></script>
     <!-- END: Quest module -->
 
+    <!-- Journal module -->
+    <script src="js/journal/controllers.js"></script>
+    <script src="js/journal/services.js"></script>
+    <script src="js/journal/directives.js"></script>
+    <!-- END: Journal module -->
+
   </head>
   <body ng-app="journal-material">
     <ion-nav-view></ion-nav-view>
