--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
     <script src="js/services.js"></script>
     <script src="js/service-localdb.js"></script>
     <script src="js/directives.js"></script>
+    <script src="js/filters.js"></script>
 
     <!-- Quest module -->
     <script src="js/quests/controllers.js"></script>
