#13 tarea gulp para compilar sass, esquema basico de un tema, colores

--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
 
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
+    <link href="css/dark_souls.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
